# alex-tools

./: .gitignore  CMakeLists.txt  README.md  TODO.md  cleanrc.c  concat.awk  concat.sh  hex.c  mk  poke.c
conf/: 10-ipv6-forwarding.conf
debian/: alex-tools.install  alex-tools.postinst  alex-tools.postrm  changelog  control  rules
debian/source/: options
scripts/: CMakeLists.txt  XCompose  extend-gpg-duration  lessfilter  lessfilter-firewall.sh  lessfilter-on-mimetype.sh  promote-vim-editor  reset-hotkeys  restart-pulseaudio  restart-system-monitor-extension  sane-tty
tools/: CMakeLists.txt  atype.c  cleanrc.c  fix-ownership.cpp  hex.c  hex.cpp
vim/: CMakeLists.txt  vimrc
vim/syntax/: alex-tools-amap.vim  alex-tools-asc.vim  alex-tools-box.vim  alex-tools-cpp-extensions.vim  alex-tools-disassembler_module.vim  alex-tools-glsl.vim  alex-tools-logrotate.vim  alex-tools-make.vim  alex-tools-resources.vim  alex-tools-sswf.vim  alex-tools-xswf.vim
